--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -93,7 +93,7 @@
                             class='icon-info-sign'></i>
                     </h5>
                     <div data-bind='popover: { content: "#todaysProgressChartPopoverContent", id: "todays-progress-chart-popover"}' class='chart'>
-                        <canvas id='todaysProgressChart' width="87" height="87"></canvas>
+                        <canvas id='todaysProgressChart' width="80px" height="80px" style='margin-left: auto; margin-right: auto; display: block;' ></canvas>
                     </div>
                 </div>
                 <div class='span2 left-divider'>
