--- a/vcweb/lighterprints/templates/lighterprints/inactive.html
+++ b/vcweb/lighterprints/templates/lighterprints/inactive.html
@@ -10,7 +10,7 @@
 <h3>Upcoming Experiment</h3>
 <div class='alert alert-info alert-block'>
     <i class='icon-2x icon-calendar'></i>
-    This experiment will <b>begin at 12:00 AM {{ experiment.start_date|date:"l, N d Y" }}</b> and end at <b>11:59 PM {{ experiment.end_date|date:"l, N d Y" }}</b>.<br>
+    This experiment will <b>begin at 12:00 AM {{ experiment.start_date|date:"l, N d Y" }}</b> and end at <b>12:00 AM {{ experiment.end_date|date:"l, N d Y" }}</b>.<br>
 </div>
 {% else %}
 <div class='alert alert-error alert-block'>
