fixing broken time remaining html

--- a/vcweb/lighterprints/templates/lighterprints/participate.html
+++ b/vcweb/lighterprints/templates/lighterprints/participate.html
@@ -90,8 +90,9 @@
                     <h5 id='time-remaining'><span class='lighterprints-scoreboard-uppercase'>Time Remaining</span></h5>
                     <table>
                         <tr>
-                            <td class='lighterprints-scoreboard-xlarge'><span class='text-data-bind='text: hoursLeft'></span>h</td>
-                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: minutesLeft'></span>m</td>
+                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: hoursLeft'></span></td>
+                            <td class='lighterprints-scoreboard-large'>:</td>
+                            <td class='lighterprints-scoreboard-xlarge'><span data-bind='text: minutesLeft'></span></td>
                         </tr>
                     </table>
                 </div>
